# matmul

./: CMakeLists.txt  README.md  main.c
